--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <hr>
     <div class="content">
         <div class="container">
-            <h1 class="front-page">Overview</h1>
+            <center><h1 class="front-page">Overview</h1></center>
             <p class="front-page">  More and more rapidly, the world is starting to notice the effects of global climate change. It's no longer a debate; it's undeniable. Historic flooding,
                 unprecedented drought, & devastating wildfires displacing millions of people are among some of the more drastic and noticable effects of climate change. Gases such as CO2,
                 Methane, and Nitrous Oxide are primary culprits in creating a "greenhouse effect" that traps more heat from the sun, steadily increasing the average temperatures
@@ -51,7 +51,7 @@
         </div>
         <hr>
         <div class="container">
-            <h1 class="front-page">Hypothesis</h1>
+            <center><h1 class="front-page">Hypothesis</h1></center>
             <p class="list">
                 Using the features GDP, Population, and past GHG emissions, we will try to0 predict future GHG emissions for each state and the sectors within those states.
             </p>
@@ -65,7 +65,7 @@
         </div>
         <hr>
         <div class="container">
-            <h1 class="front-page">Results</h1>
+            <center><h1 class="front-page">Results</h1></center>
             <h3>Initial Analysis<br></h3>
                <h5>Our initial analysis provided the following interesting & promising results:<br></h6>
                <p class="list">
@@ -128,19 +128,16 @@
             </div>
             <div class="row bg-dark about">
                 <div class="about-one">
-                    <h4>Marceline Ackerman</h4>
-                    <h5><a class="about-link" href="https://github.com/marcelineackerman" target="_blank" title="Go to Marceline's Github">Github</a></h5>
-                    <h5><a class="about-link" href="https://www.linkedin.com/in/marceline-ackerman-37526473/" target="_blank" title="Go to Marceline's Linkedin">Linkedin</a></h5>
-                </div>
-                <div class="about-two">
                     <h4>Ricardo Guerreiro</h4>
                     <h5><a class="about-link" href="https://github.com/ricardoguerreiro92" target="_blank" title="Go to Ricardo's Github">Github</a></h5>
                     <h5><a class="about-link" href="https://www.linkedin.com/in/ricardo-guerreiro-b1704519a/" target="_blank" title="Go to Ricardo's Linkedin">Linkedin</a></h5>
                 </div>
+                <div class="about-two">
+                </div>
                 <div class="about-three">
-                    <h4>Michael Friedman</h4>
-                    <h5><a class="about-link" href="https://github.com/Michaelfr22" target="_blank" title="Go to Michael's Github">Github</a></h5>
-                    <h5><a class="about-link" href="#about" title="Go to Michael's Linkedin">Linkedin</a></h5>
+                    <h4>Marceline Ackerman</h4>
+                    <h5><a class="about-link" href="https://github.com/marcelineackerman" target="_blank" title="Go to Marceline's Github">Github</a></h5>
+                    <h5><a class="about-link" href="https://www.linkedin.com/in/marceline-ackerman-37526473/" target="_blank" title="Go to Marceline's Linkedin">Linkedin</a></h5>
                 </div>
             </div>
             <div class="row bg-dark">
